[package]
name = "sutysisku-tokenizer"
version = "0.1.1"
authors = ["lagleki <gleki.is.my.name@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
wee_alloc = { version = "0.4.5", optional = true }
tokenizers = { default-features = false, features = ["unstable_wasm"], git = "https://github.com/huggingface/tokenizers" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.190", features = ["derive"] }
anyhow = "1.0.75"
getrandom = { version = "0.2.10", features = ["js"] }
serde_json = "1.0.107"
serde-wasm-bindgen = "0.6.1"
tsify = "0.4.5"
kiddo = { version = "2.1.2", features = ["serialize"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
rstest = "0.18.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
